--- a/pom.xml
+++ b/pom.xml
@@ -81,14 +81,14 @@
       <dependency>
         <groupId>org.apache.openwebbeans</groupId>
         <artifactId>openwebbeans-resource</artifactId>
-        <version>2.0.8</version>
+        <version>2.0.10-SNAPSHOT</version>
         <type>jar</type>
       </dependency>
 
       <dependency>
         <groupId>org.apache.openwebbeans</groupId>
         <artifactId>openwebbeans-se</artifactId>
-        <version>2.0.8</version>
+        <version>2.0.10-SNAPSHOT</version>
         <type>jar</type>
       </dependency>
       
